# fapp

./: README.md  main.py  main_notebook.ipynb  pyproject.toml  requirements.txt
docs/: p1.py  p2.py  p3.py  p4.py  p5.py  p6.py
fapp/: analysis.py  element.py  node.py  plotter.py
