[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"



[project]
name = "fapp"
version = "1.0.0"
authors = [
  { name="wcfrobert", email="wcfrobert@gmail.com" },
]
description = "Frame Analysis Program in Python"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/wcfrobert/fapp"
"Bug Tracker" = "https://github.com/wcfrobert/fapp/issues"